# rootsimcc

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml  ci.yml  code_coverage.yml  doc_coverage.yml
.reuse/: dep5
docs/: CMakeLists.txt
scripts/: doxygen_spdx_filter.py
src/: CMakeLists.txt  ROOT-Sim.h  meson.build
src/datatypes/: array.h  dynstr.c  dynstr.h  vector.c
src/instr/: instr_llvm.cpp
src/lib/argparse/: argparse.c  argparse.h
src/lib/config/: reflect.c
src/plugins/: rootsim-cc_llvm.cpp
test/: CMakeLists.txt  compiler.c  reflect.c  test.h
